[feature]AI服务新增知识库